Resolved issue with overlapping text on the .name class

--- a/style.css
+++ b/style.css
@@ -57,8 +57,10 @@ h3:after {
 }
 
 span.other-names {
+  position: absolute;
   font-style: italic;
   white-space: nowrap;
+  padding-left: 10px;
 }
 
 .info {
@@ -138,6 +140,7 @@ hr {
   .name {
     font-size: 3em;
     letter-spacing: -3px;
+    display: block;
   }
 }
 
@@ -152,5 +155,8 @@ hr {
   .name {
     font-size: 1.4em;
     letter-spacing: -3px;
+  }
+  span.other-names {
+    padding-left: 0;
   }
 }
